# fipy-pyrite-burial

./: .gitignore  README.md  base_model_new.py  diff_lib.py  main.py  plot_data_new.py  pyproject.toml  reactions_new.py
src/fipy-pyrite-burial/: diff_lib.py  monitor_plots.py  plot_data_new.py  plot_layout.py  reactions_new.py  run_fipy.py  run_scenarios.py
